skeplib/tests/fixtures/resolver/valid/folder_recursive/main.sk
import string;

fn main() -> Int {
  return 0;
}
