skeplib/tests/fixtures/resolver/invalid/missing_module/main.sk
import nope.missing;

fn main() -> Int {
  return 0;
}
